# plum-claims

./: .gitignore  Dockerfile  FINAL_ASSESSMENT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  review.md  skills-lock.json
.devcontainer/: devcontainer.json  docker-compose.yml
assignment/: policy_terms.json  test_cases.json
backend/: .env.example  __init__.py  alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_password_hash.py  003_add_events_retry_and_member_role.py
backend/api/: __init__.py  auth.py  dependencies.py  middleware.py  router.py
backend/api/schemas/: __init__.py  requests.py
backend/api/v1/: __init__.py  admin.py  auth.py  claims.py  documents.py
backend/core/: __init__.py  celery_app.py  config.py  container.py  exceptions.py  logging.py  serialization.py  telemetry.py
backend/domain/: __init__.py
backend/domain/claims/: __init__.py  models.py  service.py
backend/domain/decision/: __init__.py  service.py
backend/orchestrator/: __init__.py  engine.py  state.py  tasks.py
backend/providers/: __init__.py
backend/tests/: conftest.py  test_advanced_policy_rules.py  test_api.py  test_claim_pipeline.py  test_core.py  test_decision_service.py  test_document_verification.py  test_fraud_service.py  test_policy_service.py
dev-llm-claude/: llm-switch.sh
docs/: ARCHITECTURE.md  COMPONENT_CONTRACTS.md  docs.json  index.mdx  quickstart.mdx  ssguide.md
docs/architecture/: backend.mdx  component-contracts.mdx  database.mdx  frontend.mdx  overview.mdx  pipeline.mdx
docs/guides/: api-reference.mdx  claim-flow.mdx  configuration.mdx  document-processing.mdx  eval-report.mdx  fraud-detection.mdx  migrations.mdx  observability.mdx  policy-rules.mdx  testing.mdx
documents/: generate_documents.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend-old/: package-lock.json  package.json  tailwind.config.js
infra/nginx/: docs.conf
infra/prometheus/: prometheus.yml
ppt/: Dockerfile  package-lock.json  package.json
ppt/transcripts/: slide-transcripts.md
scripts/: generate_mock_documents.py  init_db.sql  run_eval.py  seed_data.py
web_research/: 01-ai-engineer-market-2025.md  02-production-ai-patterns.md  03-healthcare-ai-insights.md  README.md
(+132 files in other folders)
